kube-templates/service_with_redis_template.yaml
apiVersion: v1
kind: Service
metadata:
  name: <service_name>
  labels:
    name: <service_name>
    tier: frontend
spec:
  selector:
    app: <service_name>
  type: ClusterIP
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 10443 # template network policy allows this port on ACP
  - name: redis-port
    port: 6379
    targetPort: 6379
