kube-templates/ingress_template.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true" # redirects HTTP to HTTPS
    ingress.kubernetes.io/backend-protocol: "HTTPS"  # indicate how NGINX should communicate with the backend service
    ingress.kubernetes.io/proxy-body-size: '5000m'   # sets maximum size of request body
    kubernetes.io/ingress.class: "nginx-external"    # distinguishes between externally available or VPN/internal available service
    cert-manager.io/enabled: "true"                  # sets a provider for certs with ACP
    # ingress.kubernetes.io/whitelist-source-range: <ip_range> # whitelists ip address ranges
  labels:
    name: <service_name>
    role: ingress
    cert-manager.io/solver: http01
  name: <service_name>
spec:
  tls:
  - secretName: <service_name>-tls # can be named anything. Use a nameholder for auto generated LetsEncrypt tls secret
    hosts:
    - <site_domain_url>
  rules:
  - host: <site_domain_url>
    http:
      paths:
      - backend:
          serviceName: <service_name>
          servicePort: 443 # HTTPS port
        path: /
