kube-templates/network_policy_template.yaml
apiVersion: networking.k8s.io/v1 # ACP has a deny all network policy so you need to implement one
kind: NetworkPolicy
metadata:
  name: ingress-network-policy
  labels:
    tier: frontend
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-external
    - podSelector:
        matchLabels:
          name: ingress
    ports:
    - protocol: TCP
      port: 10443 # maps resulting HTTPS port which has already gone through Service file
